# MGD-RSS

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
data/00_Raw/: ARSS_plan-2.csv  ARSS_plan.csv  Data_of_Monitoring_Excel.csv  Data_of_Monitoring_Excel_Final Rev-2.xlsx  Data_of_Monitoring_Excel_Final Rev-3.xlsx  data_ARSS.csv  data_delay.csv  data_timelaps.csv  timelaps-2.csv
data/01_DataScience/: clean_timelaps.csv  exploration_timelaps.csv  ready_timelaps.csv
data/02_DetermModel/: model_data.csv  model_data_real.csv  real_data.csv
data/03_StochModel/: simulation_MCMC_MH.csv  transition_matrix.csv
data/04_HybridModel/: hybrid_model.csv
data/05_Calibration/: posterior_predictive_summary_one.csv  posterior_predictive_summary_three.csv  posterior_three.csv  results_synthetic_dataset.csv
data/model/: simulation_MCMC_MH.csv  transition_matrix.csv
data/points/: allowed_points.csv
data/raw/: ARSS_plan-2.csv  ARSS_plan.csv  Data_of_Monitoring_Excel.csv  clean_timelaps.csv  exploration_timelaps.csv  ready_timelaps.csv  timelaps.csv
data/sim/: hybrid_model.csv  merged_data.csv  model_data.csv  model_data_real.csv
model/01_DataScience/: DS_01_Data_Cleaning.ipynb  DS_02_Exploration.ipynb  DS_03_Features.ipynb  DS_04_Data_Splitting.ipynb
model/02_DetermModel/: DM_01_Data_Prepearing.ipynb  DM_02_Model_Parameters.ipynb  DM_03_Model_Verification.ipynb  DM_03_Verification_Data.ipynb
model/03_StochModel/: SM_01_Transition_matrix.ipynb  SM_02_MCMC_MH.ipynb  SM_03_MCMC_samples.ipynb  SM_04_Model_Verification.ipynb
model/04_HybridModel/: HM_01_Models_Integration.ipynb  HM_02_Model_Validation.ipynb
model/05_CalibrationModel/: CM_01_BayesCalibration.ipynb  (+5 more)
(+46 files in other folders)
